# joinprospect-funding-prediction

./: README.md  fundraising.ipynb  fundraising.py  pyproject.toml
