[project]
name = "joinprospect"
version = "0.1.0"
description = "Model training for predicting early-stage startup funding"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "modal>=0.67.34",
    "notebook>=7.2.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "tblib>=3.0.0",
    "treelite>=4.4.1",
]
